exam report 06/4-0-sort_list.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z3r7p2.42.us.org
Darwin 17.4.0 x86_64
$> date
Tue Jun 11 09:49:25 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 10.0.0 (clang-1000.10.44.4)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 10.0.0 (clang-1000.10.44.4)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190611/lusanche

= Git history ==================================================================
$> git -C /var/folders/j6/hw0c64d12832vtq7_dl4h7z40000gp/T/tmpKohyCd/user log --pretty='%H - %an, %ad : %s'
b016d562662da73f94c962c1af5b3b536df816e1 - Exam 42, Tue Jun 11 09:49:13 2019 -0700 : sort_list
2462ec0930bd67abbd983c5a04225528bbb2c08f - Exam 42, Tue Jun 11 09:39:35 2019 -0700 : hidenp
7f088d63adc0add3d05e54d47ec88b2f703fa46f - Exam 42, Tue Jun 11 09:25:18 2019 -0700 : print_bits
59221d479b9f81ea237db8bab01d1158e1249f48 - Exam 42, Tue Jun 11 09:17:43 2019 -0700 : repeat_alpha
f0fbd2449ce59bc4e9520f5ec11b4040102f81e6 - Exam 42, Tue Jun 11 09:04:30 2019 -0700 : ft_countdown
 
= Collected files ==========================================
$> ls -lAR /var/folders/j6/hw0c64d12832vtq7_dl4h7z40000gp/T/tmpKohyCd/user
total 8
-rw-r--r--  1 deepthought  deepthought  1203 Jun 11 09:49 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Jun 11 09:49 ft_countdown
drwxr-xr-x  3 deepthought  deepthought   102 Jun 11 09:49 hidenp
drwxr-xr-x  3 deepthought  deepthought   102 Jun 11 09:49 print_bits
drwxr-xr-x  3 deepthought  deepthought   102 Jun 11 09:49 repeat_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Jun 11 09:49 sort_list

/var/folders/j6/hw0c64d12832vtq7_dl4h7z40000gp/T/tmpKohyCd/user/ft_countdown:
total 8
-rw-r--r--  1 deepthought  deepthought  977 Jun 11 09:49 ft_countdown.c

/var/folders/j6/hw0c64d12832vtq7_dl4h7z40000gp/T/tmpKohyCd/user/hidenp:
total 8
-rw-r--r--  1 deepthought  deepthought  1262 Jun 11 09:49 hidenp.c

/var/folders/j6/hw0c64d12832vtq7_dl4h7z40000gp/T/tmpKohyCd/user/print_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1067 Jun 11 09:49 print_bits.c

/var/folders/j6/hw0c64d12832vtq7_dl4h7z40000gp/T/tmpKohyCd/user/repeat_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1319 Jun 11 09:49 repeat_alpha.c

/var/folders/j6/hw0c64d12832vtq7_dl4h7z40000gp/T/tmpKohyCd/user/sort_list:
total 8
-rw-r--r--  1 deepthought  deepthought  1141 Jun 11 09:49 sort_list.c
 
= sort_list ====================================================================
$> gcc -Wextra -Wall -Werror sort_list.c main.c -o user_exe 
sort_list.c:28:13: error: use of undeclared identifier 'NULL'
                a->next = NULL;
                          ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
